Sistema completo con búsqueda y filtros funcionando al 100% 2

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                         <label for="product-supplier">Proveedor *</label>
                         <select id="product-supplier" required>
                             <option value="">Seleccionar proveedor</option>
+                            <option value="Suma">Suma</option>
+                            <option value="Maxi Despensa">Maxi Despensa</option>
+                            <option value="Depositos">Depositos</option>
                             <option value="Walmart">Walmart</option>
-                            <option value="Costco">Costco</option>
-                            <option value="Mercado Central">Mercado Central</option>
-                            <option value="Distribuidora López">Distribuidora López</option>
-                            <option value="Abarrotera González">Abarrotera González</option>
+                            <option value="Frutas">Frutas</option>
                             <option value="Otro">Otro</option>
                         </select>
                     </div>
