🏪 Sistema Abarrotería Jardines del Edén - Completo con login, productos y pedidos

--- a/index.html
+++ b/index.html
@@ -3,168 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abarrotería - Sistema de Inventario</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Abarrotería Jardines del Edén</title>
+    <script>
+        // Redireccionar automáticamente al login
+        window.location.href = 'login.html';
+    </script>
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <div class="header">
-            <h1>🏪 Abarrotería Jardines del eden</h1>
-            <p>Sistema de Inventario y Gestión de Productos</p>
-        </div>
-
-        <!-- Navigation -->
-        <div class="nav">
-            <button class="nav-btn active" onclick="showView('dashboard')">📊 Dashboard</button>
-            <button class="nav-btn" onclick="showView('products')">📦 Productos</button>
-            <button class="nav-btn" onclick="showView('add-product')">➕ Agregar Producto</button>
-            <button class="nav-btn" onclick="showView('categories')">📂 Categorías</button>
-            <button class="nav-btn" onclick="showView('add-category')">➕ Agregar Categoría</button>
-        </div>
-
-        <!-- Dashboard View -->
-        <div id="dashboard" class="view active">
-            <h2>📊 Dashboard</h2>
-            <div class="stats">
-                <div class="stat-card">
-                    <h3 id="total-products">0</h3>
-                    <p>Total Productos</p>
-                </div>
-                <div class="stat-card">
-                    <h3 id="total-categories">0</h3>
-                    <p>Total Categorías</p>
-                </div>
-                <div class="stat-card">
-                    <h3 id="total-value">$0</h3>
-                    <p>Valor Total Inventario</p>
-                </div>
-                <div class="stat-card">
-                    <h3 id="low-stock">0</h3>
-                    <p>Productos Bajo Stock</p>
-                </div>
-            </div>
-            <div id="recent-products">
-                <h3>Productos Recientes</h3>
-                <div id="recent-products-grid" class="cards-grid"></div>
-            </div>
-        </div>
-
-        <!-- Products View -->
-        <div id="products" class="view">
-            <h2>📦 Gestión de Productos</h2>
-            <div class="filters">
-                <div class="form-group">
-                    <input type="text" id="search-products" placeholder="Buscar productos..." onkeyup="searchProducts()">
-                </div>
-                <div class="form-group">
-                    <select id="filter-category" onchange="filterProducts()">
-                        <option value="">Todas las categorías</option>
-                    </select>
-                </div>
-            </div>
-            <div id="products-grid" class="cards-grid"></div>
-        </div>
-
-        <!-- Add Product View -->
-        <div id="add-product" class="view">
-            <h2 id="product-form-title">➕ Agregar Producto</h2>
-            <div id="product-message"></div>
-            <form id="product-form">
-                <div class="form-grid">
-                    <div class="form-group">
-                        <label for="product-name">Nombre del Producto *</label>
-                        <input type="text" id="product-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="product-category">Categoría *</label>
-                        <select id="product-category" required>
-                            <option value="">Seleccionar categoría</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="product-subcategory">Subcategoría</label>
-                        <select id="product-subcategory">
-                            <option value="">Seleccionar subcategoría</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="product-buy-price">Precio de Compra *</label>
-                        <input type="number" id="product-buy-price" step="0.01" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="product-sell-price">Precio de Venta *</label>
-                        <input type="number" id="product-sell-price" step="0.01" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="product-supplier">Proveedor *</label>
-                        <select id="product-supplier" required>
-                            <option value="">Seleccionar proveedor</option>
-                            <option value="Suma">Suma</option>
-                            <option value="Maxi Despensa">Maxi Despensa</option>
-                            <option value="Depositos">Depositos</option>
-                            <option value="Walmart">Walmart</option>
-                            <option value="Frutas">Frutas</option>
-                            <option value="Otro">Otro</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="product-stock">Stock Actual</label>
-                        <input type="number" id="product-stock" min="0" value="0">
-                    </div>
-                    <div class="form-group">
-                        <label for="product-image">Imagen (URL)</label>
-                        <input type="url" id="product-image" placeholder="https://ejemplo.com/imagen.jpg">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="product-description">Descripción</label>
-                    <textarea id="product-description" placeholder="Descripción del producto..."></textarea>
-                </div>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-success" id="save-product-btn">💾 Guardar Producto</button>
-                    <button type="button" class="btn" onclick="resetProductForm()">🔄 Limpiar</button>
-                    <button type="button" class="btn btn-secondary" id="cancel-edit-btn" onclick="cancelEdit()" style="display: none;">❌ Cancelar</button>
-                </div>
-            </form>
-        </div>
-
-        <!-- Categories View -->
-        <div id="categories" class="view">
-            <h2>📂 Gestión de Categorías</h2>
-            <div id="categories-grid" class="cards-grid"></div>
-        </div>
-
-        <!-- Add Category View -->
-        <div id="add-category" class="view">
-            <h2 id="category-form-title">➕ Agregar Categoría</h2>
-            <div id="category-message"></div>
-            <form id="category-form">
-                <div class="form-grid">
-                    <div class="form-group">
-                        <label for="category-name">Nombre de la Categoría *</label>
-                        <input type="text" id="category-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="category-description">Descripción</label>
-                        <textarea id="category-description" placeholder="Descripción de la categoría..."></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="category-subcategories">Subcategorías (separadas por comas)</label>
-                    <input type="text" id="category-subcategories" placeholder="Subcategoría 1, Subcategoría 2, ...">
-                    <small class="help-text">Ejemplo: Cereales, Enlatados, Condimentos</small>
-                </div>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-success" id="save-category-btn">💾 Guardar Categoría</button>
-                    <button type="button" class="btn" onclick="resetCategoryForm()">🔄 Limpiar</button>
-                    <button type="button" class="btn btn-secondary" id="cancel-category-edit-btn" onclick="cancelCategoryEdit()" style="display: none;">❌ Cancelar</button>
-                </div>
-            </form>
-        </div>
+    <div style="text-align: center; margin-top: 50px;">
+        <h1>🏪 Redirigiendo...</h1>
     </div>
-
-    <script src="api.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
