🔧 Actualizar api.js con configuración de Railway ultimo 7

--- a/guest.html
+++ b/guest.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abarrotería - Catálogo</title>
-    <link rel="stylesheet" href="../src/css/styles.css">
-    <link rel="stylesheet" href="../src/css/guest.css">
+    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/guest.css">
 </head>
 <body>
     <div class="container">
@@ -205,8 +205,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../src/js/api.js"></script>
-    <script src="../src/js/auth.js"></script>
-    <script src="../src/js/guest.js"></script>
+    <script src="src/js/api.js"></script>
+    <script src="src/js/auth.js"></script>
+    <script src="src/js/guest.js"></script>
 </body>
 </html>
