--- a/guest.html
+++ b/guest.html
@@ -145,6 +145,80 @@
             </div>
         </div>
 
+        <!-- Ticket View - Agregar después de la vista checkout en guest.html -->
+<div id="ticket" class="view">
+    <div class="ticket-container">
+        <div class="ticket-header">
+            <h2>🎫 Ticket de Compra</h2>
+            <div class="ticket-status">
+                <span class="status-badge success">✅ Pedido Confirmado</span>
+            </div>
+        </div>
+
+        <div class="ticket-content" id="ticket-content">
+            <div class="ticket-info">
+                <div class="ticket-number">
+                    <h3>📋 Pedido #<span id="ticket-order-number"></span></h3>
+                    <p class="ticket-date" id="ticket-date"></p>
+                </div>
+
+                <div class="customer-info">
+                    <h4>👤 Información del Cliente</h4>
+                    <div class="info-grid">
+                        <div class="info-item">
+                            <strong>Nombre:</strong> <span id="ticket-customer-name"></span>
+                        </div>
+                        <div class="info-item">
+                            <strong>Teléfono:</strong> <span id="ticket-customer-phone"></span>
+                        </div>
+                        <div class="info-item">
+                            <strong>Dirección:</strong> <span id="ticket-customer-address"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="order-items">
+                    <h4>🛒 Productos Ordenados</h4>
+                    <div class="items-table">
+                        <div class="table-header">
+                            <span>Producto</span>
+                            <span>Cantidad</span>
+                            <span>Precio Unit.</span>
+                            <span>Total</span>
+                        </div>
+                        <div id="ticket-items-list"></div>
+                    </div>
+                </div>
+
+                <div class="payment-info">
+                    <h4>💰 Información de Pago</h4>
+                    <div class="payment-details">
+                        <div class="payment-item">
+                            <span>Método de pago:</span>
+                            <span><strong>Pago contra entrega</strong></span>
+                        </div>
+                        <div class="payment-item total">
+                            <span><strong>Total a pagar:</strong></span>
+                            <span><strong>Q<span id="ticket-total"></span></strong></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="delivery-info">
+                    <h4>🚚 Información de Entrega</h4>
+                    <p>Tu pedido será entregado en la dirección especificada.</p>
+                    <p><strong>Tiempo estimado:</strong> 30-60 minutos</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="ticket-actions">
+            <button class="btn btn-secondary" onclick="downloadTicket()">📸 Guardar Captura</button>
+            <button class="btn btn-success" onclick="finishOrder()">🛍️ Hacer Nuevo Pedido</button>
+        </div>
+    </div>
+</div>
+
         <!-- Order Confirmation Modal -->
         <div id="order-confirmation-modal" class="modal" style="display: none;">
             <div class="modal-content">
