--- a/guest.html
+++ b/guest.html
@@ -219,28 +219,82 @@
     </div>
 </div>
 
-        <!-- Order Confirmation Modal -->
-        <div id="order-confirmation-modal" class="modal" style="display: none;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3>✅ Pedido Confirmado</h3>
+      <!-- Reemplaza el modal de confirmación existente con este código mejorado -->
+<!-- Order Confirmation Modal con Ticket Detallado -->
+<div id="order-confirmation-modal" class="modal" style="display: none;">
+    <div class="modal-content ticket-modal">
+        <div class="modal-header">
+            <h3>🎫 Ticket de Compra</h3>
+            <span class="close" onclick="closeTicketModal()">&times;</span>
+        </div>
+        <div class="modal-body">
+            <div class="ticket-content">
+                <div class="ticket-status">
+                    <span class="status-badge success">✅ Pedido Confirmado</span>
                 </div>
-                <div class="modal-body">
-                    <div class="confirmation-content">
-                        <div class="success-icon">🎉</div>
-                        <h4>¡Tu pedido ha sido enviado!</h4>
-                        <p>Número de pedido: <strong id="order-number"></strong></p>
-                        <p>Recibirás tu pedido en la dirección especificada.</p>
-                        <p><strong>Pago contra entrega</strong></p>
-                        <div class="order-details" id="order-details"></div>
+
+                <div class="ticket-info">
+                    <div class="ticket-number">
+                        <h4>📋 Pedido #<span id="ticket-order-number"></span></h4>
+                        <p class="ticket-date" id="ticket-date"></p>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-success" onclick="startNewOrder()">🛍️ Hacer Nuevo Pedido</button>
+
+                    <div class="customer-info">
+                        <h4>👤 Información del Cliente</h4>
+                        <div class="info-grid">
+                            <div class="info-item">
+                                <strong>Nombre:</strong> <span id="ticket-customer-name"></span>
+                            </div>
+                            <div class="info-item">
+                                <strong>Teléfono:</strong> <span id="ticket-customer-phone"></span>
+                            </div>
+                            <div class="info-item">
+                                <strong>Dirección:</strong> <span id="ticket-customer-address"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="order-items">
+                        <h4>🛒 Productos Ordenados</h4>
+                        <div class="items-table">
+                            <div class="table-header">
+                                <span>Producto</span>
+                                <span>Cant.</span>
+                                <span>Precio</span>
+                                <span>Total</span>
+                            </div>
+                            <div id="ticket-items-list"></div>
+                        </div>
+                    </div>
+
+                    <div class="payment-info">
+                        <h4>💰 Información de Pago</h4>
+                        <div class="payment-details">
+                            <div class="payment-item">
+                                <span>Método de pago:</span>
+                                <span><strong>Pago contra entrega</strong></span>
+                            </div>
+                            <div class="payment-item total">
+                                <span><strong>Total a pagar:</strong></span>
+                                <span><strong>Q<span id="ticket-total"></span></strong></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="delivery-info">
+                        <h4>🚚 Información de Entrega</h4>
+                        <p>Tu pedido será entregado en la dirección especificada.</p>
+                        <p><strong>Tiempo estimado:</strong> 30-60 minutos</p>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="modal-footer">
+            <button class="btn btn-secondary" onclick="downloadTicket()">📸 Guardar Captura</button>
+            <button class="btn btn-success" onclick="startNewOrder()">🛍️ Hacer Nuevo Pedido</button>
+        </div>
     </div>
+</div>
 
     <!-- Product Modal -->
     <div id="product-modal" class="modal" style="display: none;">
